css overflow bug fixed

--- a/data/assets/css/html-album.css
+++ b/data/assets/css/html-album.css
@@ -400,7 +400,7 @@ img.icon-1200x120 {
   padding-bottom:   5px;
 }
 
-img.icon-160x120,
+.icon-160x120,
 img.icon-fix-160x120 {
   width:          160px;
   height:         120px;
